<resources>
    <string name="app_name">PerpusDesa</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="error_while_logging_in">Error While Logging In</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="fetch_user">Fetch User</string>
    <string name="click_here_to_registration">Click here to registration</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
</resources>